Opened 13 years ago
Closed 13 years ago
#4665 closed bug (fixed)
Breakpoint issues with thread functions
Reported by: | anevilyak | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Debugger | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If I run Tracker in the debugger, go into the image list for src/kits/tracker/PoseView.cpp and mark a breakpoint anywhere in BPrivate::BPoseView::AddPosesTask(), it never gets hit. This function is most definitely called as it's used as the thread function for the thread which populates the window poses at line 1114. Working on isolating a smaller testcase to see if this is a general problem with thread function breakpoints but this one at least is reliably reproducible.
Attachments (1)
Change History (6)
by , 13 years ago
Attachment: | threadtest.cpp added |
---|
comment:1 by , 13 years ago
See attached testcase: setting a breakpoint on line 7 (or another breakpoint involving threadfunc) never gets hit.
comment:2 by , 13 years ago
Further info: this seems to only be an issue with whatever function the thread starts in ; any further functions called from within the thread function can be broken into without problems.
Testcase that reproduces the problem