After creating a userland thread we didn't set up the breakpoints for it. Fixes #4665.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33369 a95241bf-73f2-0310-859d-f6bbb57e9c96